<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".fragments.UserFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Imagen de perfil -->
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivProfile"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_jjoo"
            android:layout_width="120dp"
            android:layout_height="120dp" />

        <!-- Nombre y Apellido -->
        <TextView
            android:id="@+id/txt_names"
            android:layout_below="@+id/ivProfile"
            android:layout_marginTop="20dp"
            android:layout_alignParentStart="true"
            android:text="@string/txt_names"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_names"
            android:layout_below="@+id/ivProfile"
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"
            android:text="@string/tv_names"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!-- Nombre de Usuario -->
        <TextView
            android:id="@+id/txt_username"
            android:text="@string/txt_username"
            android:layout_below="@+id/txt_names"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_username"
            android:text="@string/tv_username"
            android:layout_below="@+id/txt_names"
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- Miembro desde -->
        <TextView
            android:id="@+id/txt_tRegister"
            android:text="@string/txt_tRegister"
            android:layout_below="@+id/txt_username"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_tRegister"
            android:text="@string/tv_tRegister"
            android:layout_below="@+id/txt_username"
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- Botones -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_historyBuys"
            android:layout_below="@+id/tv_tRegister"
            android:layout_marginTop="40dp"
            android:layout_centerHorizontal="true"
            android:text="@string/btn_historyBuys"
            app:cornerRadius="8dp"
            android:backgroundTint="@color/principal"
            android:layout_width="250dp"
            android:layout_height="wrap_content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_logout"
            android:layout_below="@+id/btn_historyBuys"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:text="@string/btn_logout"
            app:cornerRadius="8dp"
            android:backgroundTint="@color/principal"
            android:layout_width="250dp"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</ScrollView>
