<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".LoginActivity">

    <!-- Titulo -->
    <TextView
        android:text="@string/txt_login"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <!-- Icono -->
    <ImageView
        android:src="@drawable/ic_login"
        android:layout_width="180dp"
        android:layout_height="180dp"/>
    
    <!-- Email -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp">

        <EditText
            android:id="@+id/et_username"
            android:hint="@string/et_username"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Contraseña -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/et_password"
            android:hint="@string/et_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Boton Ingresar -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:text="@string/btn_login"
        android:textStyle="bold"
        android:textAllCaps="true"
        app:cornerRadius="8dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/principal"
        android:layout_width="250dp"
        android:layout_height="wrap_content"/>

    <!-- Registrarse -->
    <TextView
        android:text="@string/txt_dontAccount"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_register"
        android:text="@string/tv_register"
        android:textStyle="bold"
        android:textColor="@color/principal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</androidx.appcompat.widget.LinearLayoutCompat>