<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardUseCompatPadding="true"
    android:padding="0.2dp"
    app:cardBackgroundColor="@color/white"
    card_view:cardCornerRadius="20dp"
    card_view:cardElevation="6dp"
    card_view:contentPadding="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/LCTicket"
        android:layout_width="match_parent"
        android:layout_height="165dp">

        <ImageView
            android:id="@+id/iv_qr_ticket"
            android:src="@drawable/ic_jjoo"
            android:layout_width="100dp"
            android:layout_height="180dp"
            android:layout_marginEnd="35dp"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <!-- Datos del evento -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/txt_eventId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_eventId"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/txt_uid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_uid"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/txt_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_place"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_date"
                android:textAllCaps="true"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_seat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:text="@string/txt_seat"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txt_createdDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_createdDate"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txt_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_amount"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- TextView txt_id en la parte superior derecha -->
        <TextView
            android:id="@+id/txt_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_id"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="30dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
