<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/txt_sport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_sport"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/txt_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txt_place"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="true"/>

    <TextView
        android:id="@+id/txt_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txt_day"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/txt_numberDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txt_numberDay"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/txt_hour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txt_hour"
        android:textSize="14sp" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <RadioGroup
            android:id="@+id/ticket_type_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/ticket_type_pro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pro Ticket" />

            <RadioButton
                android:id="@+id/ticket_type_elite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Elite Ticket" />

            <RadioButton
                android:id="@+id/ticket_type_ultimate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ultimate Ticket" />
        </RadioGroup>

        <TextView
            android:id="@+id/txt_final_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Final Price: $0.00"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingTop="16dp" />

        <Button
            android:id="@+id/buy_ticket_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_buy"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:backgroundTint="@color/principal"/>

    </LinearLayout>
</LinearLayout>
