<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_countryview"
    android:layout_margin="12dp"
    card_view:cardBackgroundColor = "@color/principal"
    card_view:cardCornerRadius="20dp"
    card_view:cardElevation="6dp"
    card_view:contentPadding="4dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:padding="16dp">

        <ImageView
            android:id="@+id/iv_flag"
            android:src="@drawable/ic_flag"
            android:layout_width="100dp"
            android:layout_height="180dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="16dp" />

        <TextView
            android:id="@+id/item_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/iv_flag"
            android:text="@string/item_country"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_gold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_country"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:layout_toEndOf="@id/iv_flag"
            android:text="@string/item_gold"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_silver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_gold"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/iv_flag"
            android:text="@string/item_silver"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_bronze"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_silver"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/iv_flag"
            android:textSize="18sp"
            android:text="@string/item_bronze"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>