<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardUseCompatPadding="true"
    android:padding="0.2dp"
    app:cardCornerRadius="10dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/LCevent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="5dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_event"
            android:scaleType="centerCrop"
            android:layout_width="50dp"
            android:layout_height="50dp"/>

        <!-- Datos del evento -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="10dp">

            <!-- Deporte -->
            <TextView
                android:id="@+id/txt_sport"
                android:text="@string/txt_sport"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"/>

            <!-- Ubicación y fecha/hora en una fila -->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start">

                <!-- Lugar -->
                <TextView
                    android:id="@+id/txt_place"
                    android:text="@string/txt_place"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:textSize="14sp"/>

                <!-- Hora -->
                <TextView
                    android:id="@+id/txt_date"
                    android:text="@string/txt_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"/>

                <!-- Precio alineado a la derecha -->
                <TextView
                    android:id="@+id/txt_price"
                    android:text="@string/txt_price"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"/>

            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>


</com.google.android.material.card.MaterialCardView>